kubernetes/ingress-ssl/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nginx-ingress

---
apiVersion: v1
kind: Namespace
metadata:
  name: kube-lego
